[package]
name = "simple_sign"
description = "Simple signing library"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/beamvex/simple_sign"
keywords = ["signing", "crypto", "ed25519", "rsa"]
categories = ["cryptography"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
allow-expect-in-tests = "allow"

[dependencies]
slahasher = "0.3.0"
base_xx = "0.6.2"
rsa = "0.9.6"
k256 = { version = "0.13", features = ["ecdsa"] }
digest = "0.10.7"
sha2 = "0.10.8"
sha3 = "0.10.8"
ed25519-dalek = { version = "2", features = ["rand_core", "digest"] }
rand_core = { version = "0.6", features = ["getrandom"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
slogger = "0.1.2"
rand = "0.8.5"